lessons/194/2-example/1-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: aputra/myapp-193:v6
          name: my-container-1
          ports:
            - name: http
              containerPort: 8080
