lessons/194/2-example/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-2
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: my-app
